Fixed issue when clickin on address2 on Safari

--- a/src/css/NameForm.css
+++ b/src/css/NameForm.css
@@ -3,7 +3,7 @@
 }
 
 .component-search-input > div {
-  margin: 0 10px 10px 10px;
+  margin: 10px 10px 10px 10px;
 }
 
 .component-search-input input {
